# serotiny-project-cookiecutter

./: cookiecutter.json
{{cookiecutter.package_name}}/: MANIFEST.in  pyproject.toml  setup.py
{{cookiecutter.package_name}}/hydra_plugins/{{cookiecutter.package_name}}_searchpath_plugin/: search_path.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/config/: apply.yaml  predict.yaml  test.yaml  train.yaml
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/config/data/: default.yaml  {{cookiecutter.package_name}}_dummy.yaml
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/config/mlflow/: default.yaml  {{cookiecutter.package_name}}.yaml
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/config/model/: {{cookiecutter.package_name}}_dummy.yaml
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/config/trainer/: default.yaml  {{cookiecutter.package_name}}.yaml
