[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "0.0.a0"
authors = []
description = "{{cookiecutter.project_description}}"
readme = "README.md"
packages = [
    { include = "{{cookiecutter.package_name}}" },
]
include = [
    "LICENSE",
    "**/*.yaml",
    "**/*.json",
    ".serotiny"
]
exclude = [
    "**/*.pyc",
    "**/__pycache__"
]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.8"
serotiny = "^0.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[tool.poetry.extras]


[tool.flake8]
ignore = [
	"E203",
	"E402",
	"W291",
	"W503"
]
max-line-length = 88
